# simple-serial-protocol-python

./: .gitignore  Makefile  README.md  pyproject.toml
.run/: example - _dev_ttyACM0.run.xml  example - _dev_ttyUSB0.run.xml  example.run.xml
src/: example.py  example2.py
src/simple_serial_protocol/: AbstractSerialPort.py  Baudrate.py  ParamsParser.py  PySerialSerialPort.py  PySide6SerialPort.py  RegisteredCommand.py  SimpleSerialProtocol.py  __init__.py  common.py  exception.py
src/simple_serial_protocol/param_type/: ParamType.py  ParamTypeBoolean.py  ParamTypeByte.py  ParamTypeChar.py  ParamTypeFloat.py  ParamTypeInt16.py  ParamTypeInt32.py  ParamTypeInt64.py  ParamTypeInt8.py  ParamTypeString.py  ParamTypeUnsignedInt16.py  ParamTypeUnsignedInt32.py  ParamTypeUnsignedInt64.py  ParamTypeUnsignedInt8.py  __init__.py
src/simple_serial_protocol/serial_port/: AbstractSerialPort.py  PySerialSerialPort.py  PySide6SerialPort.py  __init__.py
